# sam-audio-microservice

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_pipeline.sh
docker/: base.Dockerfile  service.Dockerfile
pipeline/common/: batching.py  config.py  hf_compat.py  http.py  serialization.py
pipeline/orchestrator/: separator.py
pipeline/services/audio_codec/: app.py
pipeline/services/clap_ranker/: app.py
pipeline/services/dit_denoiser/: app.py  denoiser.py
pipeline/services/judge_ranker/: app.py
pipeline/services/text_encoder/: app.py
scripts/: healthcheck.py  parity_test.py  test_one.py
