[project]
name = "sam-audio-pipeline"
version = "0.1.0"
description = "Microservice decomposition of SAM-Audio for dataset cleaning"
requires-python = ">=3.11"
dependencies = [
    # All heavy deps come from sam_audio itself; the pipeline package only
    # needs the service layer.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
